--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-  margin: 150px auto;
+  margin: 100px auto;
   max-width: 600px;
 }
 
@@ -34,6 +34,8 @@ form {
   line-height: 20px;
   font-style: italic;
   font-size: 13px;
+  border-color: #885df1;
+  border-style: solid;
 }
 
 .poem-request-button {
@@ -44,6 +46,7 @@ form {
   background-color: #885df1;
   color: white;
   font-size: 15px;
+  border-style: none;
 }
 
 .main-poem {
