--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,27 @@ h1 {
   line-height: 1.5;
   color: #222831;
 }
+h2 {
+  text-align: center;
+  font-weight: 400;
+  color: #222831;
+  opacity: 90%;
+}
+.form-container {
+  padding: 20px;
+  margin-bottom: 40px;
+  background-color: white;
+  border-radius: 10px;
+}
 
 form {
   display: flex;
-  padding: 15px;
-  background-color: white;
-  border-radius: 10px;
+}
+.hint {
+  line-height: 2;
+  margin-top: 5px;
+  font-size: 10px;
+  opacity: 60%;
 }
 
 .poem-request {
@@ -56,10 +71,34 @@ form {
   font-size: 13px;
   font-style: italic;
   background-color: white;
-  border-left: #885df1;
+  border-left: #885df1 4px solid;
+}
+
+.main-poem strong {
+  color: #885df1;
+}
+
+.hidden {
+  display: none;
 }
 
 footer {
   font-size: 11px;
   text-align: center;
+  opacity: 60%;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
